--- a/tests/sql/moz-fx-data-shared-prod/search_derived/search_clients_daily_v8/test_aggregation/expect.yaml
+++ b/tests/sql/moz-fx-data-shared-prod/search_derived/search_clients_daily_v8/test_aggregation/expect.yaml
@@ -55,12 +55,12 @@
 - <<: *base
   client_id: b
   engine: engine1
-  source: 'ad-click:organic'
+  source: 'ad-click:organic.none'
   ad_click_organic: 3
 - <<: *base
   client_id: b
   engine: engine1
-  source: 'search-with-ads:'
+  source: 'search-with-ads:sap.code'
   search_with_ads: 3
 - <<: *base
   client_id: c
